<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_16"
    android:paddingTop="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16"
    tools:context=".DetailActivity">

    <EditText
        android:id="@+id/ed1_name"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/names"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/ed1_age"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed1_name"
        android:hint="@string/age"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/ed1_address"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed1_age"
        android:hint="@string/address"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/ed1_email"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed1_address"
        android:hint="@string/email"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/ed1_phone"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed1_email"
        android:hint="@string/phone"
        tools:ignore="RtlCompat" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btn_delete"
        android:layout_below = "@+id/ed1_phone"
        android:layout_alignParentStart="true"
        tools:ignore="RtlCompat"/>

    <Button
        android:id="@+id/btn_update"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed1_phone"
        android:layout_centerHorizontal="true"
        android:text="@string/update"
 />
</RelativeLayout>